--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@yudiel/react-qr-scanner": "^2.4.1",
     "firebase": "^12.5.0",
     "lucide-react": "^0.552.0",
+    "mapbox-gl": "^3.16.0",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
